documentation and code updated
