# controllers/teamController.js
@@ -2,7 +2,7 @@ const Team = require('../models/teamModel');
 const AppError = require('../utils/appError');
 const catchAsync = require('../utils/catchAsync');
 
-exports.createTeam = catchAsync(async (req, res, next) => {
+exports.createTeam = async (req, res, next) => {
 
     const teamToCreate = {
         "name": req.body.name,
@@ -14,7 +14,7 @@ exports.createTeam = catchAsync(async (req, res, next) => {
     res.status(201).json({
         team
     });
-});
+}
 
 exports.getTeams = catchAsync(async (req, res, next) => {
     const teams = await Team.find()
@@ -33,15 +33,20 @@ exports.getTeam = catchAsync(async (req, res, next) => {
     });
 });
 
-exports.updateTeam = catchAsync(async (req, res, next) => {
-    const team = await Team.findByIdAndUpdate(req.params.id, req.body, {new: true, runValidators: true})
+exports.updateTeam = async (req, res, next) => {
+    const teamToUpdate = {
+        "name": req.body.name,
+        "dateCreated": req.body.dateCreated,
+        "league": req.body.league
+    };
+    const team = await Team.findByIdAndUpdate(req.params.id, teamToUpdate, {new: true, runValidators: true})
 
     if (!team) {
         return next(new AppError('Team not found!', 404));
     }
 
     res.status(204).json({});
-});
+}
 
 exports.deleteTeam = catchAsync(async (req, res, next) => {
     const team = await Team.findByIdAndDelete(req.params.id)
